tests/data/parseerror/invalid-file-7.php
<?php

namespace invalid;

use foo && bar;
